Agregando estilos al resto de las paginas

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Contacto</title>
 </head>
-<body>
+<body class="container-fluid">
 
     <!--        HEADER         --> 
 
@@ -73,7 +73,6 @@
             <div class="col-12">
                 <button class="btn btn-primary boton__submit" type="submit">Enviar</button>
             </div>
-            <p>Gracias por tu consulta, te responderemos a la brevedad.</p>
         </form>
     </div>
 
