--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Nosotros</title>
 </head>
-<body>
+<body class="container-fluid">
 
     <!--        HEADER         --> 
 
@@ -50,12 +50,15 @@
     <!--        CONTENIDO         --> 
 
     
-    <section>
+    <section class="contenedor__nosotros container-fluid">
     <h2 class="col-12">Nosotros</h2>
-    <div class="contenedor__nosotros">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quisquam exercitationem quas praesentium vel explicabo, nulla ab voluptatem expedita voluptas modi molestias accusantium dignissimos minima hic adipisci laboriosam! Labore molestias eius saepe et cum minima error numquam atque? Consectetur eius laborum minima incidunt quam harum laboriosam sed sit nemo error?</p>
+    <div class="contenedor__parrafos row">
+        <p class="parrafo__nosotros col-12">Somos una empresa familiar comformada por profesionales que amamos lo que hacemos, contamos con un largo recorrido, ayudando a muchas personas a crear y mejorar su imagen empresarial.</p>
         <img src="" alt="">
-        <p class="parrafo__nosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illum veritatis corrupti, ea nihil placeat. Cumque quibusdam quos possimus a modi, sit autem porro error necessitatibus laudantium. Blanditiis nesciunt quas magnam illo, fuga dolorem laudantium quasi corporis sapiente ipsum. Hic unde quibusdam vero deserunt? Dolore, ullam facilis. Dicta, fuga iusto?</p>
+        <p class="parrafo__nosotros col-12">Nuestro principal objetivo es ayudar a grandes y pequeñas empresas a darse a conocer con una imagen clara y sencilla, encontramos el punto exacto entre estetica y funcionalidad, mejorando el rendimiento y la capitalizacion de las empresas a las que asistimos.
+        Cuidamos cada detalle como si de nuestra empresa se tratase, estudiamos la competencia y el publico objetivo para obtener resultados eficazes y garantizados.
+        Nos complace saber que nuestros clientes quedan 100% satisfechos con nuestros servicios y mantener una relacion profesional larga y concreta.
+        </p>
     </div>
     </section>
     <section class="contenedor__equipo row">
@@ -94,11 +97,11 @@
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Servicios</h2>
-                <a href="paginas/servicios.html">Diseño web</a>
-                <a href="paginas/servicios.html">Diseño Gráfico</a>
-                <a href="paginas/servicios.html">Ilustración</a>
-                <a href="paginas/servicios.html">Medios Audiovisuales</a>
-                <a href="paginas/servicios.html">Marketing Digital</a>
+                <a href="servicios.html">Diseño web</a>
+                <a href="servicios.html">Diseño Gráfico</a>
+                <a href="servicios.html">Ilustración</a>
+                <a href="servicios.html">Medios Audiovisuales</a>
+                <a href="servicios.html">Marketing Digital</a>
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
