--- a/paginas/portafolio.html
+++ b/paginas/portafolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Portafolio</title>
 </head>
-<body>
+<body class="container-fliud">
 
     <!--        HEADER         --> 
 
@@ -50,14 +50,19 @@
     <!--        CONTENIDO         --> 
 
 
-    <div class="contenedor__portafolio">
-        <h2>Portafolio</h2>
-        <img src="../multimedia/img-01.jpg" alt="">
-        <img src="../multimedia/img-02.jpg" alt="">
-        <img src="../multimedia/img-03.jpg" alt="">
-        <img src="../multimedia/img-04.jpg" alt="">
-        <img src="../multimedia/img-01.jpg" alt="">
-        <img src="../multimedia/img-02.jpg" alt="">
+    <div class=" row contenedor__portafolio">
+        <h2 class="titulo">Portafolio</h2>
+        <p class="texto">Contamos con una amplia experiencia en Diseño y Desarrollo Web, nuestro trabajo habla por si solo.</p>
+        <img class="foto1" src="../multimedia/img-01.jpg" alt="">
+        <img class="foto2" src="../multimedia/img-02.jpg" alt="">
+        <img class="foto3" src="../multimedia/img-08.jpg" alt="">
+        <img class="foto4" src="../multimedia/img-10.jpg" alt="">
+        <img class="foto5" src="../multimedia/img-04.jpg" alt="">
+        <img class="foto6" src="../multimedia/img-09.jpg" alt="">
+        <img class="foto7" src="../multimedia/img-03.jpg" alt="">
+        <img class="foto8" src="../multimedia/img-11.png" alt="">
+        <p class="texto1">Nuestro principal objetivo es satisfacer todas las necesidades de imagen y difusion de tu empresa, o pequeño emprendimiento, creando un ambiente de confianza con nuestros clientes ofreciendoles siempre lo mejor de nosotros.
+        </p>
     </div>
     
 
@@ -72,11 +77,11 @@
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Servicios</h2>
-                <a href="paginas/servicios.html">Diseño web</a>
-                <a href="paginas/servicios.html">Diseño Gráfico</a>
-                <a href="paginas/servicios.html">Ilustración</a>
-                <a href="paginas/servicios.html">Medios Audiovisuales</a>
-                <a href="paginas/servicios.html">Marketing Digital</a>
+                <a href="servicios.html">Diseño web</a>
+                <a href="servicios.html">Diseño Gráfico</a>
+                <a href="servicios.html">Ilustración</a>
+                <a href="servicios.html">Medios Audiovisuales</a>
+                <a href="servicios.html">Marketing Digital</a>
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
