--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Servicios</title>
 </head>
-<body>
+<body class="container-fluid">
 
     <!--        HEADER         --> 
 
@@ -47,45 +47,51 @@
         </nav>
     </header>
 
- <!--        SERVICIOS         -->
+<!--        SERVICIOS         -->
 
 
- <section class="contenedor__servicios row">
+<section class="contenedor__servicios row">
     <h2 class="col-md-12">Servicios</h2>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/diseno-web.png" alt="">
-        <p>Atrae y conéctate con tus clientes de manera gratuita cuando buscan Pequeñas Empresas, como la tuya.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-12.png" alt="">
+        <h3>Desarrollo Web</h3>
+        <p>Creamos tu sitio web deacuerdo a tus necesidades totalmente responsivo y eficiente.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/diseno-grafico.png" alt="">
-        <p>Creamos publicidad simple, adecuada a tu presupesto y que genere resultados reales.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-13.png" alt="">
+        <h3>Diseño Gráfico</h3>
+        <p>Creamos la imagen adecuada para tu empresa y te asesoramos para llevarlo a cabo en todas sus funciones.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/marketing.png" alt="">
-        <p>Simplificamos tu trabajo para que ahorres tiempo para ti, tu equipo y tus clientes.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-14.png" alt="">
+        <h3>Motion Graphics</h3>
+        <p>Presentamos tus ideas de una forma dinamica, clara y simple para el facil entendimiento de tus clientes y/o colegas.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/diseno-web.png" alt="">
-        <p>Atrae y conéctate con tus clientes de manera gratuita cuando buscan Pequeñas Empresas, como la tuya.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-15.png" alt="">
+        <h3>Community Manager</h3>
+        <p>Creamos contenido adeacuado a tus necesidades. Manejamos y garantizamos el crecimiento organico de tus redes.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/diseno-grafico.png" alt="">
-        <p>Creamos publicidad simple, adecuada a tu presupesto y que genere resultados reales.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-16.png" alt="">
+        <h3>Ilustración Digital</h3>
+        <p>Creamos ilustraciones apartir de textos, personajes, paisajes, arquitectura y mucho más.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
-    <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-        <img src="../multimedia/marketing.png" alt="">
-        <p>Simplificamos tu trabajo para que ahorres tiempo para ti, tu equipo y tus clientes.</p>
+    <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
+        <img src="../multimedia/img-17.png" alt="">
+        <h3>Marketing Digital</h3>
+        <p>Creamos publicidad sencilla y directa para captar los clientes adecuados y no desperdiciar tu presupuesto.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
 </section>
 
-    <section class="contenedor__descripcionServicios">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid sequi dolores in illo, culpa omnis. Assumenda laborum ipsa ducimus nihil asperiores modi perspiciatis, tenetur facilis et ratione nobis non reprehenderit ea ex quod! Recusandae esse consectetur ratione ullam illum magni voluptatem quis facere inventore, odio sapiente reprehenderit sunt, voluptates culpa hic. Corrupti debitis temporibus dolore doloremque quae, accusantium deserunt necessitatibus.</p>
+    <section class="contenedor__desServicios col-12">
+        <p>Somos una empresa dedicada a la buena comunicacion visual, nuestro principal motor es la satisfacion de cada cliente al ver los resultados de nuestro trabajo y dedicación. Cumplimos con los mas altos estandares en desarrollo de imagen para grandes y pequeñas empresas, dominando las nuevas tecnologias y manteniendo actualizado nuestro laboratorio de ideas.</p>
     </section>
 
 
@@ -100,11 +106,11 @@
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Servicios</h2>
-                <a href="paginas/servicios.html">Diseño web</a>
-                <a href="paginas/servicios.html">Diseño Gráfico</a>
-                <a href="paginas/servicios.html">Ilustración</a>
-                <a href="paginas/servicios.html">Medios Audiovisuales</a>
-                <a href="paginas/servicios.html">Marketing Digital</a>
+                <a href="servicios.html">Diseño web</a>
+                <a href="servicios.html">Diseño Gráfico</a>
+                <a href="servicios.html">Ilustración</a>
+                <a href="servicios.html">Medios Audiovisuales</a>
+                <a href="servicios.html">Marketing Digital</a>
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
