--- a/index.html
+++ b/index.html
@@ -18,35 +18,36 @@
 
 <!--        HEADER         --> 
 
-    <header class="container-fluid">   
-        <img src="multimedia/logo.png" alt="" class="logo row">     
-        <nav class="navbar navbar-expand-lg navbar-light row">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse navbar-padding" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="paginas/portafolio.html">Portafolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="paginas/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="paginas/nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="paginas/contacto.html">Contacto</a>
-                    </li>
-                    </ul>
-                </div>
+
+<header class="container-fluid">   
+    <img src="../multimedia/logo.png" alt="" class="logo row">     
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="contenedor__menu row">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse navbar-padding" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paginas/portafolio.html">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paginas/servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paginas/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+                </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
 
     <!--        ENCABEZADO         --> 
@@ -97,13 +98,13 @@
             <div id="carouselExampleSlidesOnly" class="col-12 carousel slide"   data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active image__carousel">
-                    <img src="multimedia/img-01.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-05.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/img-02.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-06.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/img-03.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-07.png" class="d-block w-100" alt="...">
                 </div>
                 </div>
             </div>
@@ -176,6 +177,10 @@
             <p class="col-12">Todos los derechos Reservados ©2022 COLU LABS </p>
         </div>
     </footer>
+
+        <!--        SCRIPTS         --> 
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
