--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,13 +14,13 @@
 </head>
 <body class="container-fluid">
 
-    <!--        HEADER         --> 
+        <!--        HEADER         --> 
 
 
     <header class="container-fluid">   
         <img src="../multimedia/logo.png" alt="" class="logo row">     
-        <nav class="navbar navbar-expand-lg navbar-light row">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="contenedor__menu row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -55,7 +55,7 @@
             <h2 col-12>Contacto</h2>
             <div class="mb-3 col-12">
                 <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
-                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Jose Perez">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
                 <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 <label for="selectContact" class="form-label">Elige un servicio</label>
@@ -82,6 +82,10 @@
     <div class="contenedor__derechos">
         <p>Todos los derechos Reservados COLU LABS 2022®</p>
     </div>
+
+    <!--        SCRIPTS         --> 
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
