--- a/paginas/portafolio.html
+++ b/paginas/portafolio.html
@@ -19,8 +19,8 @@
 
     <header class="container-fluid">   
         <img src="../multimedia/logo.png" alt="" class="logo row">     
-        <nav class="navbar navbar-expand-lg navbar-light row">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="contenedor__menu row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -46,7 +46,7 @@
             </div>
         </nav>
     </header>
-
+    
     <!--        CONTENIDO         --> 
 
 
@@ -100,6 +100,10 @@
             <p class="col-12">Todos los derechos Reservados ©2022 COLU LABS </p>
         </div>
     </footer>
+
+    <!--        SCRIPTS         --> 
+
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
