--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <header class="container-fluid">   
-    <img src="../multimedia/logo.png" alt="" class="logo row">     
+    <img src="multimedia/logo.png" alt="" class="logo row">     
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="contenedor__menu row">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse navbar-padding" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="paginas/portafolio.html">Portafolio</a>
