agregando scss y SEO

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, desarrollo web, diseño gráfico, marketing, community manager, pagina web, sitio web, ilustracion digital">
+    <meta name="description" content="Creamos desde 0 una imagen corporativa, clara y eficiente para tu empresa o emprendimiento, no busques mas, cotiza ahora!">
     <link rel="shortcut icon" href="multimedia/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Colu</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Colu Labs</title>
 </head>
 
 <body class="container-fluid">      
@@ -20,7 +22,7 @@
 
 
 <header class="container-fluid">   
-    <img src="multimedia/logo.png" alt="" class="logo row">
+    <img src="multimedia/logo.png" alt="COLU LABS LOGO" class="logo row">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="contenedor__menu row">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,13 +59,13 @@
 
         <section class="contenedor__encabezado row">
             <div class="encabezado col-md-6 col-sm-12">
-                <h1>CONSTRUYE</h1>
+                <h1>DESARROLLA</h1>
                 <h2>TU NEGOCIO</h2>
-                <p>Podemos ayudarte a alcanzar tu próximo objetivo, ya sea que tu empresa aparezca cuando las personas hacen una búsqueda, hasta aumentar la base de clientes o agilizar tus operaciones.</p>
+                <p>Te ayudamos a alcanzar tu próximo objetivo, ya sea que tu empresa aparezca cuando las personas hacen una búsqueda, hasta aumentar la base de clientes o agilizar tus operaciones.</p>
                 <button type="button" class="btn btn-primary boton1">EMPIEZA AHORA</button>
             </div>
             <div class="encabezado col-md-6 col-sm-12">
-                <img src="multimedia/desarrollo-web.png" alt="">
+                <img src="multimedia/desarrollo-web.png" alt="COLU LABS SERVICIOS">
             </div>
         </section>
 
@@ -74,17 +76,17 @@
         <section class="contenedor__servicios row">
                 <h2 class="col-md-12">Servicios</h2>
                 <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-                    <img src="multimedia/diseno-web.png" alt="">
+                    <img src="multimedia/diseno-web.png" alt="Diseño Web">
                     <p>Atrae y conéctate con tus clientes de manera gratuita cuando buscan Pequeñas Empresas, como la tuya.</p>
                     <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
                 </div>
                 <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-                    <img src="multimedia/diseno-grafico.png" alt="">
+                    <img src="multimedia/diseno-grafico.png" alt="Diseño Gráfico">
                     <p>Creamos publicidad simple, adecuada a tu presupesto y que genere resultados reales.</p>
                     <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
                 </div>
                 <div class="cuadro__servicios col-lg-4 col-md-6 col-sm-12">
-                    <img src="multimedia/marketing.png" alt="">
+                    <img src="multimedia/marketing.png" alt="Marketing">
                     <p>Simplificamos tu trabajo para que ahorres tiempo para ti, tu equipo y tus clientes.</p>
                     <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
                 </div>
@@ -98,13 +100,13 @@
             <div id="carouselExampleSlidesOnly" class="col-12 carousel slide"   data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active image__carousel">
-                    <img src="multimedia/img-05.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-05.png" class="d-block w-100" alt="Desarrollo Web">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/img-06.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-06.png" class="d-block w-100" alt="Marketing Digital">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/img-07.png" class="d-block w-100" alt="...">
+                    <img src="multimedia/img-07.png" class="d-block w-100" alt="Diseño Gráfico">
                 </div>
                 </div>
             </div>
@@ -118,7 +120,7 @@
         <section class="contenedor__equipo row">
             <h2 class="col-12">Equipo</h2>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo1.jpg" class="card-img-top" alt="...">
+                <img src="multimedia/equipo1.jpg" class="card-img-top" alt="Juan Colucci">
                 <div class="card-body">
                     <h3>Juan Colucci</h3>
                 <p class="card-text">Diseñador Gráfico
@@ -126,14 +128,14 @@
                 </div>
             </div>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo2.jpg" class="card-img-top" alt="...">
+                <img src="multimedia/equipo2.jpg" class="card-img-top" alt="Maye Suarez">
                 <div class="card-body">
                     <h3>Maye Suarez</h3>
                 <p class="card-text">Marketing Digital</p>
                 </div>
             </div>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo3.jpg" class="card-img-top" alt="...">
+                <img src="multimedia/equipo3.jpg" class="card-img-top" alt="Eduardo Flores">
                 <div class="card-body">
                     <h3>Eduardo Flores</h3>
                 <p class="card-text">Desarrollador UX-UI</p>
@@ -149,7 +151,7 @@
     <footer class="row">
         <section class="contenedor__footer row">
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
-                <img src="multimedia/logo-blanco.png" alt="">          
+                <img src="multimedia/logo-blanco.png" alt="COLU LABS LOGO">          
                 <p>Crea el lugar perfecto en línea para tu empresa con un sitio web. Te enseñamos conceptos básicos para tener éxito en el ambiente digital.</p>                
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
@@ -163,9 +165,9 @@
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
                 <div class="contenedor__redes">
-                <a href="#"><img src="multimedia/instagram-logo.png" alt=""></a>
-                <a href="#"><img src="multimedia/twitter-logo.png" alt=""></a>
-                <a href="#"><img src="multimedia/wsspp-logo.png" alt=""></a>
+                <a href="#"><img src="multimedia/instagram-logo.png" alt="Instagram"></a>
+                <a href="#"><img src="multimedia/twitter-logo.png" alt="Twitter"></a>
+                <a href="#"><img src="multimedia/wsspp-logo.png" alt="Whatsapp"></a>
                 </div>
             </div>            
         </section>
