--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cotiza con nosotros la imagen de tu empresa, cuentanos tus ideas y empecemos ya!">
+    <meta name="keywords" content="presupuesto, cotizacion, desarrollo web, diseño gráfico, marketing, community manager, pagina web, sitio web, ilustracion digital">
     <link rel="shortcut icon" href="../multimedia/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Contacto</title>
 </head>
 <body class="container-fluid">
@@ -52,7 +54,7 @@
     <div class="contenedor__formulario">
         <form class="contenedor__contacto row">
 
-            <h2 col-12>Contacto</h2>
+            <h1 col-12>Contacto</h1>
             <div class="mb-3 col-12">
                 <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
