--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, desarrollo web, diseño gráfico, marketing, community manager, pagina web, sitio web, ilustracion digital">
+    <meta name="description" content="Somos un equipo de profesionales dedicados, amamos nuestro trabajo y damos el 110% en cada proyecto.">
     <link rel="shortcut icon" href="../multimedia/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Nosotros</title>
 </head>
 <body class="container-fluid">
@@ -18,7 +20,7 @@
 
 
     <header class="container-fluid">   
-        <img src="../multimedia/logo.png" alt="" class="logo row">     
+        <img src="../multimedia/logo.png" alt="COLU LABS LOGO" class="logo row">     
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="contenedor__menu row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +53,7 @@
 
     
     <section class="contenedor__nosotros container-fluid">
-    <h2 class="col-12">Nosotros</h2>
+    <h1 class="col-12">Nosotros</h1>
     <div class="contenedor__parrafos row">
         <p class="parrafo__nosotros col-12">Somos una empresa familiar comformada por profesionales que amamos lo que hacemos, contamos con un largo recorrido, ayudando a muchas personas a crear y mejorar su imagen empresarial.</p>
         <img src="" alt="">
@@ -64,7 +66,7 @@
     <section class="contenedor__equipo row">
         <h2 class="col-12">Equipo</h2>
         <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-            <img src="../multimedia/equipo1.jpg" class="card-img-top" alt="...">
+            <img src="../multimedia/equipo1.jpg" class="card-img-top" alt="Juan Colucci">
             <div class="card-body">
                 <h3>Juan Colucci</h3>
             <p class="card-text">Diseñador Gráfico
@@ -72,14 +74,14 @@
             </div>
         </div>
         <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-            <img src="../multimedia/equipo2.jpg" class="card-img-top" alt="...">
+            <img src="../multimedia/equipo2.jpg" class="card-img-top" alt="Maye Suarez">
             <div class="card-body">
                 <h3>Maye Suarez</h3>
             <p class="card-text">Marketing Digital</p>
             </div>
         </div>
         <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-            <img src="../multimedia/equipo3.jpg" class="card-img-top" alt="...">
+            <img src="../multimedia/equipo3.jpg" class="card-img-top" alt="Eduardo Flores">
             <div class="card-body">
                 <h3>Eduardo Flores</h3>
             <p class="card-text">Desarrollador UX-UI</p>
@@ -92,7 +94,7 @@
     <footer class="row">
         <section class="contenedor__footer row">
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
-                <img src="../multimedia/logo-blanco.png" alt="">          
+                <img src="../multimedia/logo-blanco.png" alt="COLU LABS LOGO">          
                 <p>Crea el lugar perfecto en línea para tu empresa con un sitio web. Te enseñamos conceptos básicos para tener éxito en el ambiente digital.</p>                
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
@@ -106,9 +108,9 @@
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
                 <div class="contenedor__redes">
-                <a href="#"><img src="../multimedia/instagram-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/twitter-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/wsspp-logo.png" alt=""></a>
+                <a href="#"><img src="../multimedia/instagram-logo.png" alt="Instagram"></a>
+                <a href="#"><img src="../multimedia/twitter-logo.png" alt="Twitter"></a>
+                <a href="#"><img src="../multimedia/wsspp-logo.png" alt="Whatsapp"></a>
                 </div>
             </div>            
         </section>
