--- a/paginas/portafolio.html
+++ b/paginas/portafolio.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="portafolio, desarrollo web, diseño gráfico, marketing, community manager, pagina web, sitio web, ilustracion digital">
+    <meta name="description" content="Mira nuestro portafiolio y conoce la variedad de servicios que ofrecemos para tu empresa o emprendimiento.">
     <link rel="shortcut icon" href="../multimedia/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Portafolio</title>
 </head>
 <body class="container-fliud">
@@ -18,7 +20,7 @@
 
 
     <header class="container-fluid">   
-        <img src="../multimedia/logo.png" alt="" class="logo row">     
+        <img src="../multimedia/logo.png" alt="COLU LABS LOGO" class="logo row">     
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="contenedor__menu row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,16 +53,16 @@
 
 
     <div class=" row contenedor__portafolio">
-        <h2 class="titulo">Portafolio</h2>
+        <h1 class="titulo">Portafolio</h1>
         <p class="texto">Contamos con una amplia experiencia en Diseño y Desarrollo Web, nuestro trabajo habla por si solo.</p>
-        <img class="foto1" src="../multimedia/img-01.jpg" alt="">
-        <img class="foto2" src="../multimedia/img-02.jpg" alt="">
-        <img class="foto3" src="../multimedia/img-08.jpg" alt="">
-        <img class="foto4" src="../multimedia/img-10.jpg" alt="">
-        <img class="foto5" src="../multimedia/img-04.jpg" alt="">
-        <img class="foto6" src="../multimedia/img-09.jpg" alt="">
-        <img class="foto7" src="../multimedia/img-03.jpg" alt="">
-        <img class="foto8" src="../multimedia/img-11.png" alt="">
+        <img class="foto1" src="../multimedia/img-01.jpg" alt="Desarrollo Web">
+        <img class="foto2" src="../multimedia/img-02.jpg" alt="Diseño Gráfico">
+        <img class="foto3" src="../multimedia/img-08.jpg" alt="Marketing Digital">
+        <img class="foto4" src="../multimedia/img-10.jpg" alt="Ilustración">
+        <img class="foto5" src="../multimedia/img-04.jpg" alt="Community Manager">
+        <img class="foto6" src="../multimedia/img-09.jpg" alt="Wordpress">
+        <img class="foto7" src="../multimedia/img-03.jpg" alt="Creacion de Contenido">
+        <img class="foto8" src="../multimedia/img-11.png" alt="Facebook Ads">
         <p class="texto1">Nuestro principal objetivo es satisfacer todas las necesidades de imagen y difusion de tu empresa, o pequeño emprendimiento, creando un ambiente de confianza con nuestros clientes ofreciendoles siempre lo mejor de nosotros.
         </p>
     </div>
@@ -72,7 +74,7 @@
     <footer class="row">
         <section class="contenedor__footer row">
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
-                <img src="../multimedia/logo-blanco.png" alt="">          
+                <img src="../multimedia/logo-blanco.png" alt="COLU LABS LOGO">          
                 <p>Crea el lugar perfecto en línea para tu empresa con un sitio web. Te enseñamos conceptos básicos para tener éxito en el ambiente digital.</p>                
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
@@ -86,9 +88,9 @@
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
                 <div class="contenedor__redes">
-                <a href="#"><img src="../multimedia/instagram-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/twitter-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/wsspp-logo.png" alt=""></a>
+                <a href="#"><img src="../multimedia/instagram-logo.png" alt="Instagram"></a>
+                <a href="#"><img src="../multimedia/twitter-logo.png" alt="Twitter"></a>
+                <a href="#"><img src="../multimedia/wsspp-logo.png" alt="Whatsapp"></a>
                 </div>
             </div>            
         </section>
