--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="servicios digitales, HTML, CSS, JavaScript, desarrollo web, diseño gráfico, marketing, community manager, pagina web, sitio web, ilustracion digital">
+    <meta name="description" content="Creamos tu sitio web, imagen corporativa, marketing digital, cracion de contenido y mucho mas !">
     <link rel="shortcut icon" href="../multimedia/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Servicios</title>
 </head>
 <body class="container-fluid">
@@ -18,7 +20,7 @@
 
 
     <header class="container-fluid">   
-        <img src="../multimedia/logo.png" alt="" class="logo row">     
+        <img src="../multimedia/logo.png" alt="COLU LABS LOGO" class="logo row">     
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="contenedor__menu row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,39 +53,39 @@
 
 
 <section class="contenedor__servicios row">
-    <h2 class="col-md-12">Servicios</h2>
+    <h1 class="col-md-12">Servicios</h1>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-12.png" alt="">
+        <img src="../multimedia/img-12.png" alt="Desarrollo Web">
         <h3>Desarrollo Web</h3>
         <p>Creamos tu sitio web deacuerdo a tus necesidades totalmente responsivo y eficiente.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-13.png" alt="">
+        <img src="../multimedia/img-13.png" alt="Diseño Gráfico">
         <h3>Diseño Gráfico</h3>
         <p>Creamos la imagen adecuada para tu empresa y te asesoramos para llevarlo a cabo en todas sus funciones.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-14.png" alt="">
+        <img src="../multimedia/img-14.png" alt="Motion Graphics">
         <h3>Motion Graphics</h3>
         <p>Presentamos tus ideas de una forma dinamica, clara y simple para el facil entendimiento de tus clientes y/o colegas.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-15.png" alt="">
+        <img src="../multimedia/img-15.png" alt="Community Manager">
         <h3>Community Manager</h3>
         <p>Creamos contenido adeacuado a tus necesidades. Manejamos y garantizamos el crecimiento organico de tus redes.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-16.png" alt="">
+        <img src="../multimedia/img-16.png" alt="Ilustración Digital">
         <h3>Ilustración Digital</h3>
         <p>Creamos ilustraciones apartir de textos, personajes, paisajes, arquitectura y mucho más.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
     </div>
     <div class="servicios__recuadro col-lg-6 col-md-6 col-sm-12">
-        <img src="../multimedia/img-17.png" alt="">
+        <img src="../multimedia/img-17.png" alt="Marketing Digital">
         <h3>Marketing Digital</h3>
         <p>Creamos publicidad sencilla y directa para captar los clientes adecuados y no desperdiciar tu presupuesto.</p>
         <button type="button" class="btn btn-primary boton1">COTIZA YA!</button>
@@ -101,7 +103,7 @@
     <footer class="row">
         <section class="contenedor__footer row">
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
-                <img src="../multimedia/logo-blanco.png" alt="">          
+                <img src="../multimedia/logo-blanco.png" alt="COLU LABS LOGO">          
                 <p>Crea el lugar perfecto en línea para tu empresa con un sitio web. Te enseñamos conceptos básicos para tener éxito en el ambiente digital.</p>                
             </div>
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
@@ -115,9 +117,9 @@
             <div class="widget__footer col-lg-4 col-md-6 col-sm-12">
                 <h2>Síguenos</h2>
                 <div class="contenedor__redes">
-                <a href="#"><img src="../multimedia/instagram-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/twitter-logo.png" alt=""></a>
-                <a href="#"><img src="../multimedia/wsspp-logo.png" alt=""></a>
+                <a href="#"><img src="../multimedia/instagram-logo.png" alt="Instagram"></a>
+                <a href="#"><img src="../multimedia/twitter-logo.png" alt="Twitter"></a>
+                <a href="#"><img src="../multimedia/wsspp-logo.png" alt="Whatsapp"></a>
                 </div>
             </div>            
         </section>
