--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section class="contenedor__equipo row">
             <h2 class="col-12">Equipo</h2>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo1.jpg" class="card-img-top" alt="Juan Colucci">
+                <img src="multimedia/equipo1.png" class="card-img-top" alt="Juan Colucci">
                 <div class="card-body">
                     <h3>Juan Colucci</h3>
                 <p class="card-text">Diseñador Gráfico
@@ -128,14 +128,14 @@
                 </div>
             </div>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo2.jpg" class="card-img-top" alt="Maye Suarez">
+                <img src="multimedia/equipo3.png" class="card-img-top" alt="Maye Suarez">
                 <div class="card-body">
                     <h3>Maye Suarez</h3>
                 <p class="card-text">Marketing Digital</p>
                 </div>
             </div>
             <div class="card col-md-6 col-sm-12" style="width: 18rem;">
-                <img src="multimedia/equipo3.jpg" class="card-img-top" alt="Eduardo Flores">
+                <img src="multimedia/equipo2.png" class="card-img-top" alt="Eduardo Flores">
                 <div class="card-body">
                     <h3>Eduardo Flores</h3>
                 <p class="card-text">Desarrollador UX-UI</p>
